--- a/YAZLAB2/Views/Account/ForgotPassword.cshtml
+++ b/YAZLAB2/Views/Account/ForgotPassword.cshtml
@@ -3,6 +3,14 @@
 @{
     ViewData["Title"] = "Şifremi Unuttum";
 }
+@if (TempData["Message"] != null)
+{
+    var messageType = TempData["MessageType"]?.ToString() ?? "info"; // Varsayılan mesaj tipi "info"
+    <div class="alert alert-@messageType">
+        @TempData["Message"]
+    </div>
+}
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
