--- a/YAZLAB2/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/YAZLAB2/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,2 +1,9 @@
 ﻿<h2>Şifremi Unuttum</h2>
 <p>E-posta adresinize şifre sıfırlama onay kodu gönderildi.</p>
+@if (TempData["Message"] != null)
+{
+    var messageType = TempData["MessageType"]?.ToString() ?? "info"; // Varsayılan mesaj tipi "info"
+    <div class="alert alert-@messageType">
+        @TempData["Message"]
+    </div>
+}
