--- a/YAZLAB2/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/YAZLAB2/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,2 +1,9 @@
 ﻿<h2>Şifre Sıfırlama Başarılı</h2>
 <p>Şifreniz başarıyla sıfırlandı. Yeni şifrenizle giriş yapabilirsiniz.</p>
+@if (TempData["Message"] != null)
+{
+    var messageType = TempData["MessageType"]?.ToString() ?? "info"; // Varsayılan mesaj tipi "info"
+    <div class="alert alert-@messageType">
+        @TempData["Message"]
+    </div>
+}
