--- a/YAZLAB2/Views/User/UserHubArea.cshtml
+++ b/YAZLAB2/Views/User/UserHubArea.cshtml
@@ -14,7 +14,7 @@
                 <div>
                     <a href="/Etkinlik/Index" class="btn btn-outline-primary me-2">Etkinliklere Git</a>
                     <a href="/User/Profile" class="btn btn-outline-primary me-2">Profil</a>
-                    <a href="/Account/Logout" class="btn btn-danger">Çıkış Yap</a>
+                    <a href="/User/Login" class="btn btn-danger">Çıkış Yap</a>
                 </div>
             </div>
 
