--- a/YAZLAB2/Views/Etkinlik/Index.cshtml
+++ b/YAZLAB2/Views/Etkinlik/Index.cshtml
@@ -99,7 +99,7 @@
                 {
                     <div class="col-md-4 col-lg-3 mb-4">
                         <div class="card shadow-sm h-100">
-                            <img src="https://via.placeholder.com/300x200"
+                            <img src="@(string.IsNullOrEmpty(etkinlik.EtkinlikResmi) ? "/path/to/default/image.jpg" : etkinlik.EtkinlikResmi)"
                                  class="card-img-top"
                                  alt="Etkinlik Resmi">
                             <div class="card-body">
