--- a/YAZLAB2/Views/User/Profile.cshtml
+++ b/YAZLAB2/Views/User/Profile.cshtml
@@ -2,10 +2,11 @@
     ViewData["Title"] = "Profile";
 }
 
-<h1>Profile</h1>
+<header class="top-left-header">
+    <a href="@Url.Action("UserHubArea", "User", new { Username = Model.UserName })" class="button back-to-home-button">Geri</a>
+</header>
 <div class="profile-container">
     <div class="profile-header">
-        <!-- Display profile picture, if available, otherwise show default image -->
         <img src="@(!string.IsNullOrEmpty(Model.ProfilFoto) ? Model.ProfilFoto : Url.Content("~/images/default-profile-pic.jpg"))"
              alt="Profil Fotoğrafı" class="profile-pic" />
         <h2 class="username">@Model.Ad @Model.Soyad</h2>
@@ -32,10 +33,8 @@
     </div>
 
     <div class="profile-actions">
-        <a href="@Url.Action("UserHubArea", "User", new { Username = Model.UserName })" class="button back-to-home-button">Anasayfa</a>
         <a href="@Url.Action("UpdateUser", "User")" class="button profile-update-button">Profili Güncelle</a>
         <a href="@Url.Action("ForgotPassword", "Account")" class="button password-update-button">Şifre Yenile</a>
-        <a href="@Url.Action("Login", "User")" class="button logout-button">Çıkış Yap</a>
     </div>
     @if (ViewBag.SuccessMessage != null)
     {
@@ -112,10 +111,12 @@
     }
 
     .profile-actions {
-        margin-top: 20px;
+        position: absolute;
+        top: 80px;
+        right: 20px;
         display: flex;
+        flex-direction: column;
         gap: 10px;
-        justify-content: center;
     }
 
     .info-section ul {
